--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "fast-csv": "^2.4.1",
+    "multer": "^1.3.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
     "typeorm": "^0.2.40"
